# wterm-ng

./: INSTALL  INSTALL.rxvt  Makefile.in  README  README.configure  configure  rxvt-2.4.8.lsm  wterm-6.2.9.lsm  wterm-k.tiff  wterm.tiff  wterm1.tiff  wterm1.xpm  wterm_6.2.9-8-ubuntu-launchpad.diff  wtermthai.tiff
autoconf/: Make.common.in  acconfig.h  aclocal.m4  config.h.in  configure  configure.in
doc/: BUGS  FAQ  LSM.in  Makefile  Makefile.in  TODO  changes.txt  wterm.1  wterm.html  wterm.pretbl  wtermRef.html  wtermRef.txt
doc/etc/: XTerm.ad  wterm.termcap  wterm.terminfo
doc/menu/: example.menu  jedmenu.sl  menu  wterm.menu
doc/yodl/: versioninfo.yo  versioninfo.yo.in  wterm-colours.yo  wterm-environment.yo  wterm-files.yo  wterm-fonts.yo  wterm-login.yo  wterm-mousereporting.yo  wterm-options.yo  wterm-resources.yo  wterm-scrollbar.yo  wterm-textselection.yo  wterm.yo  wtermRef-csi.yo  wtermRef-definitions.yo  wtermRef-graphics.yo  wtermRef-keycodes.yo  wtermRef-menubar.yo  wtermRef-mouse.yo  wtermRef-privatemodes.yo  wtermRef-sequences.yo  wtermRef-values.yo  wtermRef-xpm.yo  wtermRef-xterm.yo  wtermRef.yo
src/: .new  Makefile.in  WINGs.Makefile  command.c  feature.h  graphics.c  grkelot.c  grkelot.h  main.c  makeprotos-sed  menubar.c  misc.c  netdisp.c  protos.h  rmemset.c  screen.c  screen.h  scrollbar.c  scrollbar2.c  testfile  testfile2  utmp.c  version.h  wterm.h  wtermgrx.h  xdefaults.c  xpm.c
src/graphics/: Makefile.in  grxlib.c  grxlib.h  newfile.txt  qplot.c
